fix basic styling, hook up dark mode to root dark class (and thus to tailwind), and tailwindify badge link component

--- a/site/src/app/globals.css
+++ b/site/src/app/globals.css
@@ -18,13 +18,29 @@
     @apply text-xl font-bold;
   }
 
+  body {
+    @apply bg-gray-50 text-gray-950 dark:bg-gray-950 dark:text-gray-50;
+  }
+
+  a {
+    @apply text-blue-500 hover:underline;
+  }
+
+  *::marker {
+    @apply text-gray-950 dark:text-gray-50;
+  }
+
   ul,
   ol {
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-    line-height: 1.5rem;
-    gap: 1rem;
+    @apply flex flex-col gap-4 pl-5;
+  }
+
+  ul {
+    @apply list-disc;
+  }
+
+  ol {
+    @apply list-decimal;
   }
 }
 
@@ -41,12 +57,6 @@
   line-height: 2rem;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 html,
 body {
   max-width: 100vw;
@@ -58,21 +68,3 @@ https://github.com/vercel/next.js/issues/51346 */
 /* *:target {
   scroll-margin-top: var(--header-height);
 } */
-
-body {
-  background-color: var(--color-background);
-  color: var(--color-text);
-}
-
-*::marker {
-  color: var(--color-text);
-}
-
-a {
-  color: var(--color-primary);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
